# card-lua-engine

./: .clang-format  .clangd  .gitignore  BUILD.md  CARD_DOCS.md  CMakeLists.txt  CMakePresets.json  README.md  USAGE.md
.cache/clangd/index/: main.cpp.E8C725C904537693.idx
.github/workflows/: ci.yml
cmake/: IncludeCatch2.cmake  IncludeLeaf.cmake  IncludeLua.cmake  IncludeProtobuf.cmake  IncludeSol2.cmake
include/cle/: card.hpp  enums.hpp  mana_cost.hpp
include/cle/abilities/: activated_ability.hpp  modal.hpp  static_ability.hpp
include/cle/core/: card.hpp  card_type.hpp  color.hpp  creature_stats.hpp  enums.hpp  keywords.hpp
include/cle/core/internal/: instance_generator.hpp
include/cle/game/: game_context.hpp  zone.hpp
include/cle/game/internal/: game_actions.hpp
include/cle/lua/: bindings.hpp  builder.hpp  card_builder.hpp  card_engine.hpp  engine.hpp  error.hpp
include/cle/lua/internal/: bind_card.hpp  bind_card_builder.hpp  bind_enums.hpp  bind_factory.hpp  bind_game_context.hpp  bind_trigger_event.hpp
include/cle/mana/: hybrid_cost.hpp  mana_color.hpp  mana_cost.hpp
include/cle/mechanics/: mana_cost.hpp
include/cle/serialization/: card_serializer.hpp
include/cle/triggers/: trigger_event.hpp  trigger_type.hpp
proto/cle/: card.proto
tests/: CMakeLists.txt
tests/integration/: .gitkeep
tests/unit/: test_card.cpp  test_card_serialization.cpp  test_mana_cost.cpp
